Skeleton for login implemented, waiting for design

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,5 +3,20 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
-  body
+    link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css")
+    meta(name="viewport", content="width=device-width, initial-scale=1")
+  body(class="")
+
+    header(class="")
+      nav(class="")
+        ul(class="")
+          li(class="")
+            a(class="" ,href="users") Usuarios
+          li(class="")
+            a(class="", href="login") Login
+
     block content
+    
+    footer(class="")
+      div(class="mb-3")
+        h1(class="") Este es mi footer de pujoltinki, muchas gracias, solo en cines ojo, cualquier copia no autorizada de Pujoltinki la película (2022) ® será penalizada según la ley vigente en el país de procedencia de la comisión de infracción y se regirá por sus leyes y estatutos del código penal en pos de mantener la integridad de Pujoltinki la película (2022) ® sólo en cines.
