--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,9 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+  div(class="container")
+    h1= title
+    p Welcome to #{title}
+    ul
+      li
+        a(href="www.pujoltinki.com") Pujoltinki la pelicula solo en cines 
