--- a/views/index.jade
+++ b/views/index.jade
@@ -1,9 +1,28 @@
 extends layout
 
 block content
-  div(class="container")
-    h1= title
-    p Welcome to #{title}
-    ul
-      li
-        a(href="www.pujoltinki.com") Pujoltinki la pelicula solo en cines 
+  main(class="")
+
+    div(class="row row-cols-1 row-cols-md-3 mb-3 text-center")
+      div(class="col")
+        p(class="") Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi porro quisquam debitis harum velit possimus ut adipisci explicabo, repellat commodi vitae vero at illo dicta quibusdam eius sapiente doloremque ratione?
+      
+
+    h2(class="display-6 text-center mb-4") Compare our plans
+
+    div(class="table-responsive")
+      table(class="table text-center")
+        thead
+          tr
+            th(class="", style="width: 34%")
+            th(class="", style="width: 22%") Pro
+            th(class="", style="width: 22%") VIP 
+            th(class="", style="width: 22%") Deluxe
+        tbody
+          tr
+            th(scope="row", class="text-start") Internet
+          tr
+            th(score="row", class="text-start") Drinks
+          tr
+            th(score="row", class="text-start") Roox Corvo
+    
