Add Sign-up design, remove unused files and create a icon logo

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,6 +4,7 @@ html(lang="en")
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css")
+    link(rel="shortcut icon", href="images/logo-vip.png", type="image/x-icon")
     meta(name="viewport", content="width=device-width, initial-scale=1  ")
   body(class="", style="background: linear-gradient(0deg,#a9def9,#4895ef)")
 
@@ -18,8 +19,8 @@ html(lang="en")
             a(href="#", class="me-3 py-2 text-dark text-decoration-none") Contact
             a(href="#", class="me-3 py-2 text-dark text-decoration-none") Schedule   
             a(href="login", class="me-3 py-2 text-dark text-decoration-none") Pricing   
-          a(href="sign-in", class="btn btn-outline-primary mb-3") Sign up
-          a(href="sign-in", class="btn btn-outline-secondary") Login
+          a(href="sign-up", class="btn btn-outline-primary mb-3") Sign up
+          a(href="login", class="btn btn-outline-secondary") Login
 
       block content
 
