Add About us design, header modifications and generate a policy private document

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -15,12 +15,11 @@ html(lang="en")
           a(href="/", class="d-flex align-items-center text-dark text-decoration-none")
             img(src="images/aviones-vip.png", alt="logo", class="img-fluid")
           nav(class="d-inline-flex mt-2 mt-md-0 ms-md-auto")
-            a(href="#", class="me-3 py-2 text-dark text-decoration-none") About 
-            a(href="#", class="me-3 py-2 text-dark text-decoration-none") Contact
-            a(href="#", class="me-3 py-2 text-dark text-decoration-none") Schedule   
-            a(href="login", class="me-3 py-2 text-dark text-decoration-none") Pricing   
-          a(href="sign-up", class="btn btn-outline-primary mb-3") Sign up
-          a(href="login", class="btn btn-outline-secondary") Login
+            a(href="about", class="me-2 py-1 text-dark text-decoration-none") About 
+            a(href="#", class="me-2 py-1 text-dark text-decoration-none") Contact 
+            a(href="login", class="me-2 py-1 text-dark text-decoration-none") Pricing
+            a(href="sign-up", class="me-2 py-1 btn btn-outline-primary btn-sm") Sign up
+            a(href="login", class="me-2 py-1 btn btn-outline-secondary btn-sm") Login   
 
       block content
 
@@ -33,11 +32,11 @@ html(lang="en")
             h5(class="") About Us
             ul(class="list-unstyled text-small")
               li(class="mb-1")
-                a(href="contacto#desarrolladores", class="link-secondary text-decoration-none") Team behind
+                a(href="about#team", class="link-secondary text-decoration-none") Team behind
               li(class="mb-1")
-                a(href="contacto#desarrolladores", class="link-secondary text-decoration-none")  Our mission
+                a(href="about#mission", class="link-secondary text-decoration-none")  Our mission
               li(class="mb-1")
-                a(href="contacto#desarrolladores", class="link-secondary text-decoration-none") Privacy Policy 
+                a(href="https://www.freeprivacypolicy.com/live/d8e2fd84-3154-4bcf-871e-a35bce545cad", class="link-secondary text-decoration-none") Privacy Policy 
           div(class="col-6 col-md")
             h5(class="") Contact Us
             ul(class="list-unstyled text-small")
