--- a/views/layout.jade
+++ b/views/layout.jade
@@ -27,7 +27,7 @@ html(lang="en")
         div(class="row")
           div(class="col-12 col-md")
             img(src="images/aviones-vip.png", alt="logo", class="img-fluid")
-            small(class="d-block mb-3 text-muted")® 2022.
+            small(class="d-block mb-3 text-muted") ® 2022.
           div(class="col-6 col-md")
             h5(class="") About Us
             ul(class="list-unstyled text-small")
@@ -54,5 +54,5 @@ html(lang="en")
 
 
     script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js", integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM", crossorigin="anonymous")
- 
+    script(src="//cdn.jsdelivr.net/npm/sweetalert2@11") 
         
