--- a/views/login.jade
+++ b/views/login.jade
@@ -40,40 +40,5 @@ block content
             .catch(err => console.log("Err is: "+err));
 
         }
-
-        function mostrarLogin() {
-            const Toast = Swal.fire({
-            toast: true,
-            position: 'top-end',
-            showConfirmButton: false,
-            timer: 3000,
-            timerProgressBar: true,
-            icon: 'success',
-            title: 'Signed in successfully'
-            })
-            .then(
-                function() {
-                    window.location.href = "/"
-                }
-            )
-
-        }
-
-        function mostrarLoginIncorrecto() {
-            const Toast = Swal.mixin({
-            toast: true,
-            position: 'top-end',
-            showConfirmButton: false,
-            timer: 3000,
-            timerProgressBar: true,
-            didOpen: (toast) => {
-                toast.addEventListener('mouseenter', Swal.stopTimer)
-                toast.addEventListener('mouseleave', Swal.resumeTimer)
-            }
-            })
-
-            Toast.fire({
-            icon: 'error',
-            title: 'Incorrect credentials'
-            })
-        }
+        
+    script(src="/javascripts/show-login.js") 
