--- a/views/layout.jade
+++ b/views/layout.jade
@@ -94,6 +94,7 @@ html(lang="en")
      }
     
     script(src="/javascripts/logout.js")
+    script(src="/javascripts/form-validation.js")
     script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js", integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM", crossorigin="anonymous")
     script(src="//cdn.jsdelivr.net/npm/sweetalert2@11") 
         
