--- a/views/login.jade
+++ b/views/login.jade
@@ -2,22 +2,26 @@ extends layout
 
 block content
   div(class="container")
-    form(class="form", method="POST", action="")
+    form(class="needs-validation", novalidate, method="POST", action="")
 
         div(class="mb-3")
             label(class="form-label" for="inputUsername") Email
-            input(id="inputUsername", name="inputUsername", type="text", class="form-control" placeholder="email@example.com")
+            input(id="inputUsername", name="inputUsername", type="email", class="form-control" placeholder="email@example.com", required)
+            div(class="valid-feedback") GOOD!
+            div( class="invalid-feedback") Please insert a valid Email
 
         div(class="mb-3")
             label(class="form-label" for="inputUsername") Password
-            input(id="inputPassword", name="inputPassword", type="password", class="form-control" placeholder="password")
+            input(id="inputPassword", name="inputPassword", type="password", class="form-control" placeholder="password", required)
+            div(class="valid-feedback") GOOD!
+            div( class="invalid-feedback") Please insert a valid Password
         div(id="passwordHelpBlock" class="form-text") Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.
 
         div(class="mb-3")
             input(type="checkbox", class="form-check-input", )
             label(class="", for="") Remember me
 
-        input(id="inputSend", name="inputSend", onclick="validar()", value="Login" class="btn btn-primary")   
+        input(id="inputSend", name="inputSend", type="submit", onclick="validar()", value="Login" class="btn btn-primary")   
 
     script.
         function validar() {
