--- a/views/signup.jade
+++ b/views/signup.jade
@@ -2,31 +2,42 @@ extends layout
  
 block content
  div(class="container")
-    form(class="form")
+    form(class="needs-validation", novalidate) 
 
         div(class="mb-3")
             label(class="form-label" for="inputUsername") Email
-            input(id="inputUsername", name="inputUsername", type="text", class="form-control" placeholder="Email@example.com")
-
+            input(id="inputUsername", name="inputUsername", type="email", class="form-control" placeholder="Email@example.com", required)
+            div(class="valid-feedback") GOOD!
+            div( class="invalid-feedback") Please insert a valid Email
         div(class="mb-3")
             label(class="form-label" for="inputName") Name
-            input(id="inputName", name="inputName", type="text", class="form-control" placeholder="Your name")
+            input(id="inputName", name="inputName", type="text", class="form-control" placeholder="Your name", required)
+            div(class="valid-feedback") GOOD!
+            div( class="invalid-feedback") Please insert a valid Name
 
         div(class="mb-3")
             label(class="form-label" for="inputSurname") Surname
-            input(id="inputSurname", name="inputSurname", type="text", class="form-control" placeholder="Your surname")
+            input(id="inputSurname", name="inputSurname", type="text", class="form-control" placeholder="Your surname", required)
+            div(class="valid-feedback") GOOD!
+            div( class="invalid-feedback") Please insert a valid Surname
 
         div(class="mb-3")
             label(class="form-label" for="inputPhone") Phone
-            input(id="inputPhone", name="inputPhone", type="tel", class="form-control" placeholder="Phone format 9-XXXXXXXX" pattern="[9]{1}-[0-9]{8}")
+            input(id="inputPhone", name="inputPhone", type="tel", class="form-control" placeholder="Phone format 9-XXXXXXXX" pattern="[9]{1}-[0-9]{8}", required)
+            div(class="valid-feedback") GOOD!
+            div( class="invalid-feedback") Please insert a valid Phone number
 
         div(class="mb-3")
             label(class="form-label" for="inputPassword") Password
-            input(id="inputPassword", name="inputPassword", type="password", class="form-control" placeholder="Password")
+            input(id="inputPassword", name="inputPassword", type="password", class="form-control" placeholder="Password", required)
+            div(class="valid-feedback") GOOD!
+            div( class="invalid-feedback") Please insert a valid Password
         
         div(class="mb-3")
             label(class="form-label" for="inputPassword2") Re-Type Password
-            input(id="inputPassword2", name="inputPassword2", type="password", class="form-control" placeholder="Re-type password")
+            input(id="inputPassword2", name="inputPassword2", type="password", class="form-control" placeholder="Re-type password", required)
+            div(class="valid-feedback") GOOD!
+            div( class="invalid-feedback") Please insert a valid Password
         div(id="passwordHelpBlock" class="form-text") Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.
 
         div(class="col-mb-3 text-center")
